   be 16-bit or 32-bit.
 - Added to the HTML file what was missing was the subroutines that convert status bar characters
   to overworld border characters.
 - Fixed an issue where if you simply set !OverWorldBorderBlankTile to any other value besides
   $1F, the routines "SixteenBitHexDecDivisionToOWB" and "ThirtyTwoBitHexDecDivisionToOWB"
   wouldn't update to that because I forgot to make it use such a define.
 - Added signed HexDec routines. These handles a two's complement values.
 - Added 16x8 ("bonus stars" number) support.
05-02-2025 v3.2.1
 - Fixed an oversight that I forgot to update the HTML formatting (content centered rather than
   on the left edge of the viewport) for other HTML files.
 - Updated the link to a youtube video "Binary to decimal can’t be that hard, right?" to point to
   a more appropriate video time.
08-03-2025 v3.2.1 some more description and sample updates
 - Fixed an error on "CountingAnimation16Bit" that when "Gradual" is greater than "Actual", it is
   supposed to decrease Gradual towards actual and therefore "-=" is a more appropriate than "+="
 - Mentioned 2 miscellaneous subroutines with a table: StringTo8x16Char and
   CountingAnimation16Bit.
 - Mentioned on Frames2Timer that hours' maximum that it can safely represent is 255, and thus
   the maximum timer value is $034BBFFF, which is 255 hours, 59 minutes, 59 seconds, and 59
   frames (about 98 centiseconds).
 - Added notice in the comments about repeated symbols routine.
 - Renamed "FramesToTimer" to "TimerToFrames" to avoid misleading name.
 - Fixed grammar issue with the readme explaining the 8x16 graphic.
 - Added note about Direct Indirect Long and SA-1 that writing a 1 or 2 bytes address may break.
 - Added even slower counting animation for sample use of "CountingAnimation16Bit" by only
   counting by 1 on certain frames if the Gradual value and actual value difference is low enough.
 - Corrected "Supress" to "Suppress".