@@ -2411,7 +2411,7 @@ incsrc "../StatusBarRoutinesDefines/StatusBarDefines.asm"
 	LDA.b #!StatusBar_TestDisplayElement_Pos_Tile&gt;&gt;16	;|
 	STA $06							;/
 	if !StatusBar_UsingCustomProperties
-		LDA #!StatusBar_RepeatedSymbols_EmptyProp		;\$07: Empty tile properties
+		LDA.b #!StatusBar_RepeatedSymbols_EmptyProp		;\$07: Empty tile properties
 		STA $07							;/
 		LDA.b #!StatusBar_RepeatedSymbols_FullProp		;\$08: Full tile properties
 		STA $08							;/
@@ -2475,7 +2475,7 @@ incsrc "../StatusBarRoutinesDefines/StatusBarDefines.asm"
 	LDA.b #!StatusBarPosition&gt;&gt;16					;|
 	STA $06								;/
 	if !StatusBar_UsingCustomProperties
-		LDA #!StatusBar_RepeatedSymbols_EmptyProp		;\$07: Empty tile properties
+		LDA.b #!StatusBar_RepeatedSymbols_EmptyProp		;\$07: Empty tile properties
 		STA $07							;/
 		LDA.b #!StatusBar_RepeatedSymbols_FullProp		;\$08: Full tile properties
 		STA $08							;/
@@ -2727,13 +2727,13 @@ incsrc "../StatusBarRoutinesDefines/StatusBarDefines.asm"
 		ADC #$22				;/
 		BRA ++
 		+
-		LDA #!OverWorldBorderBlankTile		;&gt;OWB Blank tile.
+		LDA #!OverworldBorderBlankTile		;&gt;OWB Blank tile.
 		++
 	endif
 	STA !OverworldBorder_TestDisplayElement_Pos_Tile	;&gt;Write 10s place
 	
 	;Set properties:
-		LDA.b #!OverWorldBorder_TileProp
+		LDA.b #!OverworldBorder_TileProp
 		STA !OverworldBorder_TestDisplayElement_Pos_Prop
 		STA !OverworldBorder_TestDisplayElement_Pos_Prop+(1*2)
 	RTL</pre></div></p>
@@ -2768,7 +2768,7 @@ incsrc "../StatusBarRoutinesDefines/StatusBarDefines.asm"
 				CPY #$00
 				BNE ...HundredsNonZero
 				...NoHundreds
-					LDA #!OverWorldBorderBlankTile
+					LDA #!OverworldBorderBlankTile
 					STA !OverworldBorder_TestDisplayElement_Pos_Tile
 					BRA ..HandleTens
 				...HundredsNonZero
@@ -2781,7 +2781,7 @@ incsrc "../StatusBarRoutinesDefines/StatusBarDefines.asm"
 				CPX #$00
 				BNE ...WriteTens
 				...NoTens
-					LDA #!OverWorldBorderBlankTile
+					LDA #!OverworldBorderBlankTile
 					STA !OverworldBorder_TestDisplayElement_Pos_Tile+(1*2)
 					BRA ..DigitsDone
 				...WriteTens
@@ -2793,7 +2793,7 @@ incsrc "../StatusBarRoutinesDefines/StatusBarDefines.asm"
 		endif
 		
 		;Set properties
-			LDA.b #!OverWorldBorder_TileProp
+			LDA.b #!OverworldBorder_TileProp
 			STA !OverworldBorder_TestDisplayElement_Pos_Prop
 			STA !OverworldBorder_TestDisplayElement_Pos_Prop+(1*2)
 			STA !OverworldBorder_TestDisplayElement_Pos_Prop+(2*2)
@@ -2826,7 +2826,7 @@ incsrc "../StatusBarRoutinesDefines/StatusBarDefines.asm"
 		-
 		LDA.w !Scratchram_16bitHexDecOutput+$04-(!NumberOfDigitsDisplayed-1)|!dp,y
 		STA !OverworldBorder_TestDisplayElement_Pos_Tile,x
-		LDA.b #!OverWorldBorder_TileProp						;\Page 1, Palette 6, and Priority ON
+		LDA.b #!OverworldBorder_TileProp						;\Page 1, Palette 6, and Priority ON
 		STA.l !OverworldBorder_TestDisplayElement_Pos_Prop,x				;/
 		DEY
 		DEX #2
@@ -2870,7 +2870,7 @@ incsrc "../StatusBarRoutinesDefines/Defines.asm"
 		LDA !Scratchram_32bitHexDecOutput+(!Setting_32bitHexDec_MaxNumberOfDigits-1)-(!NumberOfDigitsDisplayed-1),x
 		PLX
 		STA !OverworldBorder_TestDisplayElement_Pos_Tile,x
-		LDA.b #!OverWorldBorder_TileProp
+		LDA.b #!OverworldBorder_TileProp
 		STA.l !OverworldBorder_TestDisplayElement_Pos_Prop,x
 		DEY
 		DEX #2
@@ -2914,14 +2914,14 @@ incsrc "../StatusBarRoutinesDefines/StatusBarDefines.asm"
 		endif
 		-
 		if !RightAligned == 0
-			LDA #!OverWorldBorderBlankTile		;\Clear tiles
+			LDA #!OverworldBorderBlankTile		;\Clear tiles
 			STA !OverworldBorderPositionTile,x	;/
-			LDA.b #!OverWorldBorder_TileProp	;\Set tile properties
+			LDA.b #!OverworldBorder_TileProp	;\Set tile properties
 			STA.l !OverworldBorderPositionProp,x	;/
 		else
-			LDA #!OverWorldBorderBlankTile
+			LDA #!OverworldBorderBlankTile
 			STA !OverworldBorderPositionTile-((((!NumberOfDigitsDisplayed*2)+1)-1)*2),x
-			LDA.b #!OverWorldBorder_TileProp
+			LDA.b #!OverworldBorder_TileProp
 			STA.l !OverworldBorderPositionProp-((((!NumberOfDigitsDisplayed*2)+1)-1)*2),x
 		endif
 		DEX #2
@@ -2978,7 +2978,7 @@ incsrc "../StatusBarRoutinesDefines/StatusBarDefines.asm"
 		LDA.b #!OverworldBorderPositionTile     : STA $00
 		LDA.b #!OverworldBorderPositionTile&gt;&gt;8  : STA $01
 		LDA.b #!OverworldBorderPositionTile&gt;&gt;16 : STA $02
-		LDA.b #!OverWorldBorder_TileProp
+		LDA.b #!OverworldBorder_TileProp
 		STA $06
 		LDA.b #!OverworldBorderPositionProp     : STA $03
 		LDA.b #!OverworldBorderPositionProp&gt;&gt;8  : STA $04
@@ -3022,14 +3022,14 @@ incsrc "../StatusBarRoutinesDefines/StatusBarDefines.asm"
 		endif
 		-
 		if !RightAligned == 0
-			LDA #!OverWorldBorderBlankTile
+			LDA #!OverworldBorderBlankTile
 			STA !OverworldBorderPositionTile,x
-			LDA.b #!OverWorldBorder_TileProp
+			LDA.b #!OverworldBorder_TileProp
 			STA !OverworldBorderPositionProp,x
 		else
-			LDA #!OverWorldBorderBlankTile
+			LDA #!OverworldBorderBlankTile
 			STA !OverworldBorderPositionTile-((((!NumberOfDigitsDisplayed*2)+1)-1)*2),x
-			LDA.b #!OverWorldBorder_TileProp
+			LDA.b #!OverworldBorder_TileProp
 			STA.l !OverworldBorderPositionProp-((((!NumberOfDigitsDisplayed*2)+1)-1)*2),x
 		endif
 		DEX #2
@@ -3092,7 +3092,7 @@ incsrc "../StatusBarRoutinesDefines/StatusBarDefines.asm"
 		LDA.b #!OverworldBorderPositionTile : STA $00			;\Set address to write at a given status bar position (tile number).
 		LDA.b #!OverworldBorderPositionTile&gt;&gt;8 : STA $01		;|
 		LDA.b #!OverworldBorderPositionTile&gt;&gt;16 : STA $02		;/
-		LDA.b #!OverWorldBorder_TileProp : STA $06
+		LDA.b #!OverworldBorder_TileProp : STA $06
 		LDA.b #!OverworldBorderPositionProp : STA $03			;\Set address to write at a given status bar position (tile properties).
 		LDA.b #!OverworldBorderPositionProp&gt;&gt;8 : STA $04		;|
 		LDA.b #!OverworldBorderPositionProp&gt;&gt;16 : STA $05		;/
@@ -3209,7 +3209,7 @@ main:
 						CPY #$00					;\Is the 100s place nonzero? Yes, then leave that and the 10s showing up
 						BNE ....HundredsNonZero				;/No, then erase the 100s digit and see if 10s is also part of the leading 0s.
 						....NoHundreds
-							LDA #!OverWorldBorderBlankTile			;\Erase the 100s digit
+							LDA #!OverworldBorderBlankTile			;\Erase the 100s digit
 							STA !OverworldBorderPositionTile-(3*2)		;/
 							BRA ...HandleTens				;&gt;Check if the next digit is also part of the leading zero.
 						....HundredsNonZero
@@ -3222,7 +3222,7 @@ main:
 						CPX #$00					;\Is the 10s place nonzero? Yes, then leave the 10s place showing up
 						BNE ....WriteTens				;/No, then erase the 10s.
 						....NoTens
-							LDA #!OverWorldBorderBlankTile			;&gt;If 0, replace 10s digit with blank.
+							LDA #!OverworldBorderBlankTile			;&gt;If 0, replace 10s digit with blank.
 							STA !OverworldBorderPositionTile-(2*2)
 							BRA ...WritePercent
 						....WriteTens
@@ -3231,10 +3231,10 @@ main:
 							ADC #$22					;|
 							STA !OverworldBorderPositionTile-(2*2)		;/
 					...WritePercent
-						LDA #!OverWorldBorderPercentTile
+						LDA #!OverworldBorderPercentTile
 						STA !OverworldBorderPositionTile-(0*2)
 					..WriteProps
-						LDA.b #!OverWorldBorder_TileProp
+						LDA.b #!OverworldBorder_TileProp
 						STA !OverworldBorderPositionProp-(0*2)
 						STA !OverworldBorderPositionProp-(1*2)
 						STA !OverworldBorderPositionProp-(2*2)
@@ -3249,9 +3249,9 @@ main:
 				;won't display "90"). Also setup tile properties when enabled.
 					LDX.b #(4-1)*2
 					..Loop
-						LDA #!OverWorldBorderBlankTile
+						LDA #!OverworldBorderBlankTile
 						STA !OverworldBorderPositionTile,x
-						LDA.b #!OverWorldBorder_TileProp
+						LDA.b #!OverworldBorder_TileProp
 						STA !OverworldBorderPositionProp,x
 						DEX #2
 						BPL ..Loop
@@ -3274,7 +3274,7 @@ main:
 					LDA.b #!OverworldBorderPositionProp : STA $03
 					LDA.b #!OverworldBorderPositionProp&gt;&gt;8 : STA $04
 					LDA.b #!OverworldBorderPositionProp&gt;&gt;16 : STA $05
-					LDA.b #!OverWorldBorder_TileProp : STA $06
+					LDA.b #!OverworldBorder_TileProp : STA $06
 					JSL HexDec_WriteStringDigitsToHUDFormat2
 					..TooMuchDigits
 			endif
@@ -3291,12 +3291,12 @@ main:
 					;!Scratchram_16bitHexDecOutput+$04 (1s place) -&gt; 1/10s place
 					JSL HexDec_SixteenBitHexDecDivisionToOWB
 					
-					LDA !Scratchram_16bitHexDecOutput+$01 : STA !OverworldBorderPositionTile-(5*2) : LDA.b #!OverWorldBorder_TileProp : STA !OverworldBorderPositionProp-(5*2)	;&gt;100s place
-					LDA !Scratchram_16bitHexDecOutput+$02 : STA !OverworldBorderPositionTile-(4*2) : LDA.b #!OverWorldBorder_TileProp : STA !OverworldBorderPositionProp-(4*2)	;&gt;10s place
-					LDA !Scratchram_16bitHexDecOutput+$03 : STA !OverworldBorderPositionTile-(3*2) : LDA.b #!OverWorldBorder_TileProp : STA !OverworldBorderPositionProp-(3*2)	;&gt;1s place
-					LDA #!OverWorldBorderDotTile : STA !OverworldBorderPositionTile-(2*2) : LDA.b #!OverWorldBorder_TileProp : STA !OverworldBorderPositionProp-(2*2)		;&gt;Decimal point symbol
-					LDA !Scratchram_16bitHexDecOutput+$04 : STA !OverworldBorderPositionTile-(1*2) : LDA.b #!OverWorldBorder_TileProp : STA !OverworldBorderPositionProp-(1*2)	;&gt;1/10ths place
-					LDA #!OverWorldBorderPercentTile : STA !OverworldBorderPositionTile-(0*2) : LDA.b #!OverWorldBorder_TileProp : STA !OverworldBorderPositionProp-(0*2)		;&gt;percent symbol
+					LDA !Scratchram_16bitHexDecOutput+$01 : STA !OverworldBorderPositionTile-(5*2) : LDA.b #!OverworldBorder_TileProp : STA !OverworldBorderPositionProp-(5*2)	;&gt;100s place
+					LDA !Scratchram_16bitHexDecOutput+$02 : STA !OverworldBorderPositionTile-(4*2) : LDA.b #!OverworldBorder_TileProp : STA !OverworldBorderPositionProp-(4*2)	;&gt;10s place
+					LDA !Scratchram_16bitHexDecOutput+$03 : STA !OverworldBorderPositionTile-(3*2) : LDA.b #!OverworldBorder_TileProp : STA !OverworldBorderPositionProp-(3*2)	;&gt;1s place
+					LDA #!OverworldBorderDotTile : STA !OverworldBorderPositionTile-(2*2) : LDA.b #!OverworldBorder_TileProp : STA !OverworldBorderPositionProp-(2*2)		;&gt;Decimal point symbol
+					LDA !Scratchram_16bitHexDecOutput+$04 : STA !OverworldBorderPositionTile-(1*2) : LDA.b #!OverworldBorder_TileProp : STA !OverworldBorderPositionProp-(1*2)	;&gt;1/10ths place
+					LDA #!OverworldBorderPercentTile : STA !OverworldBorderPositionTile-(0*2) : LDA.b #!OverworldBorder_TileProp : STA !OverworldBorderPositionProp-(0*2)		;&gt;percent symbol
 				elseif !Default_PercentagePrecision == 2
 					JSL HexDec_RemoveLeadingZeroes16BitLeaveLast3
 					;XXX.XX%
@@ -3308,17 +3308,17 @@ main:
 					;!Scratchram_16bitHexDecOutput+$04 (1s place) -&gt; 1/100s place
 					JSL HexDec_SixteenBitHexDecDivisionToOWB
 					
-					LDA !Scratchram_16bitHexDecOutput+$00 : STA !OverworldBorderPositionTile-(6*2) : LDA.b #!OverWorldBorder_TileProp : STA !OverworldBorderPositionProp-(6*2)	;&gt;100s place
-					LDA !Scratchram_16bitHexDecOutput+$01 : STA !OverworldBorderPositionTile-(5*2) : LDA.b #!OverWorldBorder_TileProp : STA !OverworldBorderPositionProp-(5*2)	;&gt;10s place
-					LDA !Scratchram_16bitHexDecOutput+$02 : STA !OverworldBorderPositionTile-(4*2) : LDA.b #!OverWorldBorder_TileProp : STA !OverworldBorderPositionProp-(4*2)	;&gt;1s place
-					LDA #!OverWorldBorderDotTile : STA !OverworldBorderPositionTile-(3*2) : LDA.b #!OverWorldBorder_TileProp : STA !OverworldBorderPositionProp-(3*2)		;&gt;Decimal point symbol
-					LDA !Scratchram_16bitHexDecOutput+$03 : STA !OverworldBorderPositionTile-(2*2) : LDA.b #!OverWorldBorder_TileProp : STA !OverworldBorderPositionProp-(2*2)	;&gt;1/10ths place
-					LDA !Scratchram_16bitHexDecOutput+$04 : STA !OverworldBorderPositionTile-(1*2) : LDA.b #!OverWorldBorder_TileProp : STA !OverworldBorderPositionProp-(1*2)	;&gt;1/100ths place
-					LDA #!OverWorldBorderPercentTile : STA !OverworldBorderPositionTile-(0*2) : LDA.b #!OverWorldBorder_TileProp : STA !OverworldBorderPositionProp-(0*2)		;&gt;percent symbol
+					LDA !Scratchram_16bitHexDecOutput+$00 : STA !OverworldBorderPositionTile-(6*2) : LDA.b #!OverworldBorder_TileProp : STA !OverworldBorderPositionProp-(6*2)	;&gt;100s place
+					LDA !Scratchram_16bitHexDecOutput+$01 : STA !OverworldBorderPositionTile-(5*2) : LDA.b #!OverworldBorder_TileProp : STA !OverworldBorderPositionProp-(5*2)	;&gt;10s place
+					LDA !Scratchram_16bitHexDecOutput+$02 : STA !OverworldBorderPositionTile-(4*2) : LDA.b #!OverworldBorder_TileProp : STA !OverworldBorderPositionProp-(4*2)	;&gt;1s place
+					LDA #!OverworldBorderDotTile : STA !OverworldBorderPositionTile-(3*2) : LDA.b #!OverworldBorder_TileProp : STA !OverworldBorderPositionProp-(3*2)		;&gt;Decimal point symbol
+					LDA !Scratchram_16bitHexDecOutput+$03 : STA !OverworldBorderPositionTile-(2*2) : LDA.b #!OverworldBorder_TileProp : STA !OverworldBorderPositionProp-(2*2)	;&gt;1/10ths place
+					LDA !Scratchram_16bitHexDecOutput+$04 : STA !OverworldBorderPositionTile-(1*2) : LDA.b #!OverworldBorder_TileProp : STA !OverworldBorderPositionProp-(1*2)	;&gt;1/100ths place
+					LDA #!OverworldBorderPercentTile : STA !OverworldBorderPositionTile-(0*2) : LDA.b #!OverworldBorder_TileProp : STA !OverworldBorderPositionProp-(0*2)		;&gt;percent symbol
 				endif
 			elseif !RightAligned == 0
 				.ClearTiles
-					LDA #!OverWorldBorderBlankTile
+					LDA #!OverworldBorderBlankTile
 					if !Default_PercentagePrecision == 1
 						LDX.b #($06-1)*2		;&gt;[100.0%] is 6 characters. So we must clear out 6 tiles.
 					elseif !Default_PercentagePrecision == 2
@@ -3350,7 +3350,7 @@ main:
 					LDA.b #!OverworldBorderPositionProp : STA $03
 					LDA.b #!OverworldBorderPositionProp&gt;&gt;8 : STA $04
 					LDA.b #!OverworldBorderPositionProp&gt;&gt;16 : STA $05
-					LDA.b #!OverWorldBorder_TileProp : STA $06
+					LDA.b #!OverworldBorder_TileProp : STA $06
 					JSL HexDec_WriteStringDigitsToHUDFormat2
 			endif
 		endif
