@@ -95,12 +95,12 @@ endif
 				!StatusBar_RepeatedSymbols_Empty_TileProp_XFlip    = 0 ;>Valid values: 0-1.
 				!StatusBar_RepeatedSymbols_Empty_TileProp_YFlip    = 0 ;>Valid values: 0-1.
 		;Overworld border tiles for various symbols
-			!OverWorldBorderSlashCharacterTileNumb = $91
-			!OverWorldBorderBlankTile = $1F
-			!OverWorldBorderDotTile = $93
-			!OverWorldBorderPercentTile = $92
-			!OverWorldBorderPlusSymbol = $15
-			!OverWorldBorderMinusSymbol = $14
+			!OverworldBorderSlashCharacterTileNumb = $91
+			!OverworldBorderBlankTile = $1F
+			!OverworldBorderDotTile = $93
+			!OverworldBorderPercentTile = $92
+			!OverworldBorderPlusSymbol = $15
+			!OverworldBorderMinusSymbol = $14
 			;Tile properties for most symbols.
 				!OverworldBorder_TileProp_Page     = 1 ;>Valid values: 0-3.
 				!OverworldBorder_TileProp_Palette  = 6 ;>Valid values: 0-7.
@@ -296,7 +296,7 @@ endif
 		!StatusBar_TileProp = GetLayer3YXPCCCTT(!StatusBar_TileProp_YFlip,!StatusBar_TileProp_XFlip,!StatusBar_TileProp_Priority,!StatusBar_TileProp_Palette,!StatusBar_TileProp_Page)
 		!StatusBar_RepeatedSymbols_FullProp = GetLayer3YXPCCCTT(!StatusBar_RepeatedSymbols_Full_TileProp_YFlip,!StatusBar_RepeatedSymbols_Full_TileProp_XFlip,!StatusBar_TileProp_Priority,!StatusBar_RepeatedSymbols_Full_TileProp_Palette,!StatusBar_RepeatedSymbols_Full_TileProp_Page)
 		!StatusBar_RepeatedSymbols_EmptyProp = GetLayer3YXPCCCTT(!StatusBar_RepeatedSymbols_Empty_TileProp_YFlip,!StatusBar_RepeatedSymbols_Empty_TileProp_XFlip,!StatusBar_TileProp_Priority,!StatusBar_RepeatedSymbols_Empty_TileProp_Palette,!StatusBar_RepeatedSymbols_Empty_TileProp_Page)
-		!OverWorldBorder_TileProp = GetLayer3YXPCCCTT(!OverworldBorder_TileProp_YFlip,!OverworldBorder_TileProp_XFlip,!OverworldBorder_TileProp_Priority,!OverworldBorder_TileProp_Palette,!OverworldBorder_TileProp_Page)
+		!OverworldBorder_TileProp = GetLayer3YXPCCCTT(!OverworldBorder_TileProp_YFlip,!OverworldBorder_TileProp_XFlip,!OverworldBorder_TileProp_Priority,!OverworldBorder_TileProp_Palette,!OverworldBorder_TileProp_Page)
 	;Timer to frames (this converts multiple units of time into total number of frames).
 		function TimerToFrames(Hours, Minutes, Seconds, Frames) = (Hours*216000)+(Minutes*3600)+(Seconds*60)+Frames
 	!StatusBar_TestDisplayElement_Pos_Tile = VanillaStatusBarXYToAddress(!StatusBar_TestDisplayElement_PosX, !StatusBar_TestDisplayElement_PosY, !RAM_0EF9)
